# python-steward

./: .coverage  .gitignore  Makefile  README.md  SANDBOXING.md  pyproject.toml
.github/: copilot-instructions.md
docs/: protocols.md
steward/: __init__.py  acp.py  acp_events.py  cli.py  config.py  conversation.py  fediverse.py  llm.py  logger.py  mcp.py  mcp_client.py  repl.py  runner.py  session.py  skills.py  system_prompt.py  types.py  utils.py
steward/tools/: __init__.py  apply_patch.py  ask_user.py  bash.py  configure_python_environment.py  create.py  create_directory.py  create_file.py  discover_skills.py  edit.py  fetch_data.py  fetch_webpage.py  file_search.py  get_changed_files.py  get_python_executable_details.py  git_commit.py  git_diff.py  git_stash.py  git_status.py  glob.py  grep.py  grep_search.py  install_python_packages.py  list_bash.py  list_code_usages.py  list_dir.py  list_memories.py  load_skill.py  manage_todo_list.py  mcp_call.py  mcp_list_servers.py  mcp_list_tools.py  mkdir.py  multi_replace_string_in_file.py  read_bash.py  read_file.py  registry.py  replace_string_in_file.py  report_intent.py  run_in_terminal.py  (+11 more)
tests/: conftest.py  test_acp.py  test_acp_events.py  test_additional_tools.py  test_apply_patch.py  test_ask_user.py  test_bash.py  test_cli.py  test_code_tools.py  test_config.py  test_conversation.py  test_create.py  test_create_directory.py  test_create_file.py  test_edit.py  test_execute.py  test_fediverse.py  test_git_tools.py  test_glob.py  test_grep.py  test_grep_search.py  test_interactive_bash.py  test_list_dir.py  test_list_memories.py  test_llm.py  test_logger.py  test_mcp_client.py  test_mcp_server.py  test_mcp_tools_extra.py  test_mkdir.py  test_path_safety.py  test_python_tools.py  test_read_file.py  test_repl.py  test_replace_string.py  test_report_intent.py  test_run_js.py  test_runner.py  test_session.py  test_shared.py  (+10 more)
