[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steward"
version = "0.1.0"
description = "Python CLI steward for LLM tool runs"
authors = [{ name = "rcarmo" }]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "openai>=1.55.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "unidiff>=0.7.5",
    "quickjs>=1.19.4",
]

[project.scripts]
steward = "steward.cli:main"

[tool.setuptools.packages.find]
include = ["steward", "steward.*"]
